# harness-claude-code

./: .gitignore  .impeccable.md  README.md  pyproject.toml
harness/: __init__.py  claude_session.py  cli.py  config.py  events.py  implementation.py  negotiation.py  orchestrator.py  planner.py  review.py  state.py  utils.py  web.py
harness/prompts/: contract_criteria.py  implementation.py  negotiation.py  planner.py  review.py
harness/static/: index.html  onboarding.html
tests/: test_state.py  test_utils.py
