[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "harness-claude"
version = "0.1.0"
description = "Generator-Evaluator orchestration harness for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
harness-claude = "harness.cli:main"
